--- a/Python basics.ipynb
+++ b/Python basics.ipynb
@@ -116,28 +116,31 @@
    "source": [
     "# Lists\n",
     "Elements can be of different datatype\\\n",
-    "indexing starts from 0 \\\n"
+    "indexing starts from 0\\\n",
+    "mutable\n",
+    "can have duplicates\\\n",
+    "uses []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "id": "c4fd5840",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 2, 3, 'a', 'string']"
+       "[1, 2, 3, 'a', 'string', 1]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "my_list=[1,2,3,'a','string']\n",
+    "my_list=[1,2,3,'a','string',1]\n",
     "my_list"
    ]
   },
@@ -345,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "67b08345",
    "metadata": {},
    "outputs": [
@@ -355,7 +358,7 @@
        "'python'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "423c81fa",
    "metadata": {},
    "outputs": [
@@ -376,7 +379,7 @@
        "[1, 2, 3, 'a', 'string', '99']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "fdf626ab",
    "metadata": {},
    "outputs": [
@@ -405,7 +408,7 @@
        "[1, 2, 3, 5, 9]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "74be993c",
    "metadata": {},
    "outputs": [
@@ -436,14 +439,14 @@
        "[9, 5, 3, 2, 1]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "b.reverse()\n",
-    "b"
+    "b\n"
    ]
   },
   {
@@ -456,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "id": "2c6753f4",
    "metadata": {},
    "outputs": [
@@ -466,7 +469,7 @@
        "[[1, 2, 3], [4, 5, 6], [7, 8, 10]]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,11 +484,428 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a1a49558",
+   "metadata": {},
+   "source": [
+    "index() - To find the index of an element\\\n",
+    "if 5 is in b and b is in matrix. Trying to print the index of b would work but not the index of 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "32c8e01e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(matrix.index(b))\n",
+    "matrix = [[1,2],[3,4]]\n",
+    "print(matrix.index([3,4]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "d2931d68",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(matrix.count([1,2]))\n",
+    "print(matrix.count(1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0be583d5",
    "metadata": {},
    "source": [
-    "# Tuples"
+    "# Tuples\n",
+    "Similar to list but immutable\\\n",
+    "can have duplicates\\\n",
+    "tuples uses ( )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "fc979e13",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 4, 5, 5, 6)"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t=(1,4,5,5,6)\n",
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "04c37568",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 'a', 'python')"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t=(1,'a','python')\n",
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "08c40cfd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.index(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "1ee2eabe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t.count(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a8e4ba3",
+   "metadata": {},
+   "source": [
+    "# Dictionaries\n",
+    "similar to hash table - works on key value pairs\\\n",
+    "uses { }\\\n",
+    "can use any datatype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "9fdbdcb9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 'hello', '2': 'world'}"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict = {1:\"hello\",'2':\"world\"}\n",
+    "dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "87b7f7c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "world\n",
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dict['2'])\n",
+    "print(dict[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "d91bbded",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict={'k1':\"abcd\",'k2':\"asdf\"}\n",
+    "print(dict['k1'][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "4d86265b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict2 = {1:5,2:6}\n",
+    "dict2[2]-3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "9c1a0068",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'k1': 'keerthi', 'k2': 'vasan'}"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d={}\n",
+    "d['k1']='keerthi'\n",
+    "d['k2']='vasan'\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "1961affd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['k1', 'k2'])"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "6dff03ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values(['abcd', 'asdf'])"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict.values()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "620253c3",
+   "metadata": {},
+   "source": [
+    "# Sets\n",
+    "unordered collection of unique element"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "4d3ce4ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n",
+      "<class 'set'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=(1,2)\n",
+    "print(type(x))\n",
+    "x=set()\n",
+    "x.add(5)\n",
+    "x.add(7)\n",
+    "print(type(x))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eef39fd5",
+   "metadata": {},
+   "source": [
+    "Removes the duplicates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "2431344a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 3, 5, 6}\n",
+      "[1, 3, 5, 5, 5, 6]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list = [1,3,5,5,5,6]\n",
+    "print(set(list))\n",
+    "print(list)\n",
+    "len(set(list))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2abf92f",
+   "metadata": {},
+   "source": [
+    "# None(Placeholder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "ef50e299",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "b=None\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "7c8c4d9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ada18c44",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
