conditional statements, loops, decorators, lambda

--- a/Python basics.ipynb
+++ b/Python basics.ipynb
@@ -900,9 +900,370 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bde8104f",
+   "metadata": {},
+   "source": [
+    "# Conditional Statement\n",
+    "1.if\\\n",
+    "2.else\\\n",
+    "3.elif\\\n",
+    "Every conditional statements and loops ends with :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "0ba2ae52",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no\n"
+     ]
+    }
+   ],
+   "source": [
+    "if (5<3):\n",
+    "    print(\"yes\")\n",
+    "else:\n",
+    "    print(\"no\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "74c53e9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a=1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=1\n",
+    "b=2\n",
+    "c=3\n",
+    "if(a == 5):\n",
+    "    print(\"a=5\")\n",
+    "elif (a == 1):\n",
+    "    print (\"a=1\")\n",
+    "else:\n",
+    "    print(\"a is \",a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "605e4945",
+   "metadata": {},
+   "source": [
+    "# For loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "0e182aec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=[1,2,3,4,5,6,7,8,9,10]\n",
+    "for i in a:\n",
+    "    print(a.index(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "9e5aa38b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l=[]\n",
+    "for i in range(10):\n",
+    "    l.append(i)\n",
+    "l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a78163af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "even\n",
+      "odd\n",
+      "even\n",
+      "odd\n",
+      "even\n",
+      "odd\n",
+      "even\n",
+      "odd\n",
+      "even\n",
+      "odd\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in l:\n",
+    "    if(i%2 == 0):\n",
+    "        print(\"even\")\n",
+    "    else:\n",
+    "        print(\"odd\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "087f5ecc",
+   "metadata": {},
+   "source": [
+    "# While loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e82b0712",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x =  0\n",
+      "x =  1\n",
+      "x =  2\n",
+      "x =  3\n",
+      "x =  4\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=0\n",
+    "while (x<5):\n",
+    "    print(\"x = \",x)\n",
+    "    x += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2360060",
+   "metadata": {},
+   "source": [
+    "# Functions\n",
+    "Python function can return more than one value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "beaa466d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def say_hello(name1,name2):\n",
+    "    return \"hello \"+name1, \"hello \"+name2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "c69b71c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('hello vasan', 'hello keerthi')"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "say_hello(\"vasan\",\"keerthi\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b237751",
+   "metadata": {},
+   "source": [
+    "# Decorators\n",
+    "Assigning a function to a variable and this variable name can be used instead of the function name with same parameters to call the same function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "f8d002e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "greet = say_hello"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "d342d4d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.say_hello(name1, name2)>"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "greet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "17fe0eec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('hello ram', 'hello sita')"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "greet(\"ram\",\"sita\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbc378cc",
+   "metadata": {},
+   "source": [
+    "# Lambda\n",
+    "A small anonymous(without name) function which can take any number of arguments but can have only one expression\\\n",
+    "lambda arguments : expression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "b3de8d92",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x= lambda a: a+10\n",
+    "x(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "016cdd05",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x= lambda a,b: a*b\n",
+    "x(5,6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "3d41ec7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "def multiplier(n):\n",
+    "    return lambda a:a*n\n",
+    "doubler = multiplier(2)\n",
+    "print(doubler(10))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ada18c44",
+   "id": "1d906dc9",
    "metadata": {},
    "outputs": [],
    "source": []
