--- a/Python basics.ipynb
+++ b/Python basics.ipynb
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bde8104f",
+   "id": "f53305b9",
    "metadata": {},
    "source": [
     "# Conditional Statement\n",
@@ -914,7 +914,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0ba2ae52",
+   "id": "f1faafa2",
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +935,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "74c53e9d",
+   "id": "c9282bf1",
    "metadata": {},
    "outputs": [
     {
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "605e4945",
+   "id": "34d979c4",
    "metadata": {},
    "source": [
     "# For loop"
@@ -969,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "0e182aec",
+   "id": "555e29ed",
    "metadata": {},
    "outputs": [
     {
@@ -998,7 +998,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "9e5aa38b",
+   "id": "7a85d575",
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a78163af",
+   "id": "4ddea1c7",
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1052,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "087f5ecc",
+   "id": "faf42548",
    "metadata": {},
    "source": [
     "# While loop"
@@ -1061,7 +1061,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e82b0712",
+   "id": "e15ca1c2",
    "metadata": {},
    "outputs": [
     {
@@ -1085,7 +1085,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2360060",
+   "id": "890174af",
    "metadata": {},
    "source": [
     "# Functions\n",
@@ -1095,7 +1095,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "beaa466d",
+   "id": "6defe58d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1106,7 +1106,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "c69b71c3",
+   "id": "ced74513",
    "metadata": {},
    "outputs": [
     {
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b237751",
+   "id": "ddd97261",
    "metadata": {},
    "source": [
     "# Decorators\n",
@@ -1136,7 +1136,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "f8d002e5",
+   "id": "ce2d6e30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1146,7 +1146,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "d342d4d7",
+   "id": "3b719413",
    "metadata": {},
    "outputs": [
     {
@@ -1167,7 +1167,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "17fe0eec",
+   "id": "4b25576d",
    "metadata": {},
    "outputs": [
     {
@@ -1187,7 +1187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbc378cc",
+   "id": "5eb5d44d",
    "metadata": {},
    "source": [
     "# Lambda\n",
@@ -1198,7 +1198,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "b3de8d92",
+   "id": "06da3b2d",
    "metadata": {},
    "outputs": [
     {
@@ -1220,7 +1220,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "016cdd05",
+   "id": "0202418c",
    "metadata": {},
    "outputs": [
     {
@@ -1242,7 +1242,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "3d41ec7d",
+   "id": "6375b1eb",
    "metadata": {},
    "outputs": [
     {
@@ -1257,13 +1257,15 @@
     "def multiplier(n):\n",
     "    return lambda a:a*n\n",
     "doubler = multiplier(2)\n",
-    "print(doubler(10))"
+    "tripler = multiplier(3)\n",
+    "print(doubler(10))\n",
+    "print(tripler(1))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d906dc9",
+   "id": "b1222dff",
    "metadata": {},
    "outputs": [],
    "source": []
