Classes and objects

--- a/Python basics.ipynb
+++ b/Python basics.ipynb
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f53305b9",
+   "id": "bdfe7ec5",
    "metadata": {},
    "source": [
     "# Conditional Statement\n",
@@ -914,7 +914,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f1faafa2",
+   "id": "246856fc",
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +935,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c9282bf1",
+   "id": "67f15e5b",
    "metadata": {},
    "outputs": [
     {
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34d979c4",
+   "id": "c3e683a9",
    "metadata": {},
    "source": [
     "# For loop"
@@ -969,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "555e29ed",
+   "id": "27e349f9",
    "metadata": {},
    "outputs": [
     {
@@ -998,7 +998,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "7a85d575",
+   "id": "fdd5d3b5",
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "4ddea1c7",
+   "id": "5a81c553",
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1052,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "faf42548",
+   "id": "75fda679",
    "metadata": {},
    "source": [
     "# While loop"
@@ -1061,7 +1061,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e15ca1c2",
+   "id": "57b4d4dc",
    "metadata": {},
    "outputs": [
     {
@@ -1085,7 +1085,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "890174af",
+   "id": "ce7321d4",
    "metadata": {},
    "source": [
     "# Functions\n",
@@ -1095,7 +1095,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "6defe58d",
+   "id": "6e297c0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1106,7 +1106,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "ced74513",
+   "id": "6c8269cf",
    "metadata": {},
    "outputs": [
     {
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddd97261",
+   "id": "64880b84",
    "metadata": {},
    "source": [
     "# Decorators\n",
@@ -1136,7 +1136,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "ce2d6e30",
+   "id": "1f1ae520",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1146,7 +1146,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "3b719413",
+   "id": "828d6d22",
    "metadata": {},
    "outputs": [
     {
@@ -1167,7 +1167,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "4b25576d",
+   "id": "31d0eeae",
    "metadata": {},
    "outputs": [
     {
@@ -1187,7 +1187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5eb5d44d",
+   "id": "3e9f719b",
    "metadata": {},
    "source": [
     "# Lambda\n",
@@ -1198,7 +1198,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "06da3b2d",
+   "id": "7968b532",
    "metadata": {},
    "outputs": [
     {
@@ -1220,7 +1220,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "0202418c",
+   "id": "e8d82c1e",
    "metadata": {},
    "outputs": [
     {
@@ -1241,15 +1241,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "6375b1eb",
+   "execution_count": 43,
+   "id": "3955ce5a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20\n"
+      "20\n",
+      "30\n"
      ]
     }
    ],
@@ -1259,13 +1260,205 @@
     "doubler = multiplier(2)\n",
     "tripler = multiplier(3)\n",
     "print(doubler(10))\n",
-    "print(tripler(1))"
+    "print(tripler(10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5890a023",
+   "metadata": {},
+   "source": [
+    "# OOPS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c96b252c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "__main__.cars"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Cars:\n",
+    "    x=\"Maruthi\"\n",
+    "Cars"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "98f6a4ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Maruthi'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c=cars()\n",
+    "c.x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "905c2984",
+   "metadata": {},
+   "source": [
+    "# \\_\\_init\\_\\_()\n",
+    "This method is used to define all data memebers in the class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "d3b8e6b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ram\n",
+      "Sita's age is 36\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Person:\n",
+    "    def __init__(self,name,age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "p1=Person(\"Ram\",40)\n",
+    "p2=Person(\"Sita\",36)\n",
+    "print(p1.name)\n",
+    "print(\"Sita's age is %g\"%p2.age)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2f85f5c",
+   "metadata": {},
+   "source": [
+    " # \\_\\_str\\_\\_()\n",
+    " Tells us what has to be returned when a class is represented as a string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "6568ec9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.Person object at 0x0000026AEFDF7D90>\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Person:\n",
+    "    def __init__(self,name):\n",
+    "        self.name = name\n",
+    "p1=Person(\"John\")\n",
+    "\n",
+    "print(p1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "a9746953",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jam\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Person:\n",
+    "    def __init__(self,name):\n",
+    "        self.name = name\n",
+    "    def __str__(self):\n",
+    "        return f\"{self.name}\"\n",
+    "        \n",
+    "p1 = Person(\"Jam\")\n",
+    "print(p1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58fe6fdf",
+   "metadata": {},
+   "source": [
+    "# Member functions\n",
+    "first parameter to any function in python for a datamember or member function is self\\\n",
+    "For global variable in python "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "0caffbc9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Area of circle with radius 1 is 3.14\n",
+      "Area of circle with radius 2 is 12.56\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Circle:\n",
+    "    pi = 3.14\n",
+    "    def __init__(self,radius=1):\n",
+    "        self.radius = radius\n",
+    "        self.area = radius*radius*Circle.pi\n",
+    "    def setRadius(self,new_radius):\n",
+    "        self.radius = new_radius\n",
+    "        self.area = new_radius*new_radius*self.pi\n",
+    "    def printArea(self):\n",
+    "        print(\"Area of circle with radius %s is %s\"%(self.radius,self.area))\n",
+    "        \n",
+    "c1 = Circle()\n",
+    "c1.printArea()\n",
+    "c2 = Circle (2)\n",
+    "c2.printArea()\n",
+    "c3 = Circle()\n",
+    "c3.setRadius(5)\n",
+    "print(c3.radius)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1222dff",
+   "id": "94709c8a",
    "metadata": {},
    "outputs": [],
    "source": []
