Single and multilevel inheritance

--- a/Python basics.ipynb
+++ b/Python basics.ipynb
@@ -1265,7 +1265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5890a023",
+   "id": "e7aea7a4",
    "metadata": {},
    "source": [
     "# OOPS"
@@ -1274,7 +1274,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c96b252c",
+   "id": "4f8fb2d4",
    "metadata": {},
    "outputs": [
     {
@@ -1297,7 +1297,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "98f6a4ec",
+   "id": "959ddd5d",
    "metadata": {},
    "outputs": [
     {
@@ -1318,7 +1318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "905c2984",
+   "id": "912cbd89",
    "metadata": {},
    "source": [
     "# \\_\\_init\\_\\_()\n",
@@ -1328,7 +1328,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "d3b8e6b3",
+   "id": "07acbaa6",
    "metadata": {},
    "outputs": [
     {
@@ -1353,7 +1353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2f85f5c",
+   "id": "67ebe88c",
    "metadata": {},
    "source": [
     " # \\_\\_str\\_\\_()\n",
@@ -1363,7 +1363,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "6568ec9a",
+   "id": "0b7a7b5d",
    "metadata": {},
    "outputs": [
     {
@@ -1386,7 +1386,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "a9746953",
+   "id": "c95371aa",
    "metadata": {},
    "outputs": [
     {
@@ -1410,18 +1410,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58fe6fdf",
+   "id": "1766cbd1",
    "metadata": {},
    "source": [
     "# Member functions\n",
     "first parameter to any function in python for a datamember or member function is self\\\n",
-    "For global variable in python "
+    "For global variable in python set the varaible inside class and outside the init()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "0caffbc9",
+   "id": "79110e14",
    "metadata": {},
    "outputs": [
     {
@@ -1456,9 +1456,110 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "09dde672",
+   "metadata": {},
+   "source": [
+    "# Inheritance\n",
+    "Python supports single, multiple, multilevel, hierarchical and hybrid inheritance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fce746a9",
+   "metadata": {},
+   "source": [
+    "Single inheritance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "af2ea119",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ram  :  BCA\n",
+      "Ram  :  20\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Person:\n",
+    "    def __init__(self,name,age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "    def showDetail(self):\n",
+    "        print(self.name,\" : \",self.age)\n",
+    "        \n",
+    "class Student(Person):\n",
+    "    def __init__(self,name,age,qualification):\n",
+    "        Person.__init__(self,name,age)\n",
+    "        self.qualification = qualification\n",
+    "    def printQual(self):\n",
+    "        print(self.name,\" : \",self.qualification)\n",
+    "        \n",
+    "x = Student(\"Ram\",20,\"BCA\")\n",
+    "x.printQual()\n",
+    "x.showDetail()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b5f6302",
+   "metadata": {},
+   "source": [
+    "Multilevel inheritance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "b145647e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Age :  20\n",
+      "fname :  Ram\n"
+     ]
+    }
+   ],
+   "source": [
+    "class A:\n",
+    "    def __init__(self,fname):\n",
+    "        self.fname = fname\n",
+    "    def printFname(self):\n",
+    "        print(\"fname : \",self.fname)\n",
+    "        \n",
+    "class B(A):\n",
+    "    def __init__(self,fname,lname):\n",
+    "        A.__init__(self,fname)\n",
+    "        self.lname = lname\n",
+    "    def printLname(self):\n",
+    "        print(\"lastname : \",self.lname)\n",
+    "        \n",
+    "class C(B):\n",
+    "    def __init__(self,fname,lname,age):\n",
+    "        B.__init__(self,fname,lname)\n",
+    "        self.age = age\n",
+    "    def printAge(self):\n",
+    "        print(\"Age : \",self.age)\n",
+    "        \n",
+    "x = C(\"Ram\",\"Raj\",20)\n",
+    "x.printAge()\n",
+    "x.printFname()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94709c8a",
+   "id": "2f29ad27",
    "metadata": {},
    "outputs": [],
    "source": []
