--- a/Python basics.ipynb
+++ b/Python basics.ipynb
@@ -1613,14 +1613,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "150c8ec8",
+   "metadata": {},
+   "source": [
+    "### Multiple inheritance"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "9c97a30a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "garderning\n",
+      "art\n",
+      "play\n"
+     ]
+    }
+   ],
    "source": [
-    "class "
+    "class Father:\n",
+    "    def getSkill(self):\n",
+    "        print(\"garderning\")\n",
+    "class Mother:\n",
+    "    def getSkill(self):\n",
+    "        print(\"art\")\n",
+    "class Child(Father,Mother):\n",
+    "    def getskill(self):\n",
+    "        Father.getSkill(self)\n",
+    "        Mother.getSkill(self)\n",
+    "        print(\"play\")\n",
+    "        \n",
+    "c = Child()\n",
+    "c.getskill()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2980729",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
