--- a/Python basics.ipynb
+++ b/Python basics.ipynb
@@ -1614,7 +1614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2145d339",
+   "id": "5a581935",
    "metadata": {},
    "source": [
     "### Multiple inheritance"
@@ -1622,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "9c97a30a",
    "metadata": {},
    "outputs": [
@@ -1647,6 +1647,8 @@
     "    def getskill(self):\n",
     "        Father.getSkill(self)\n",
     "        Mother.getSkill(self)\n",
+    "        #super can also be used\n",
+    "        #super().getSkill()\n",
     "        print(\"play\")\n",
     "        \n",
     "c = Child()\n",
@@ -1655,7 +1657,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74bc2172",
+   "id": "51504e5b",
    "metadata": {},
    "source": [
     "# super()"
@@ -1663,20 +1665,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "936bbdb7",
+   "execution_count": 36,
+   "id": "f30704c5",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "object.__init__() takes exactly one argument (the instance to initialize)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-33-3e69160de706>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     17\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Volume = \"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0ml\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mh\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m \u001b[0ms\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mSquare\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     20\u001b[0m \u001b[0ms\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetArea\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[0mc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mCube\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-33-3e69160de706>\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, l, b)\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32mclass\u001b[0m \u001b[0mSquare\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0ml\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m         \u001b[0msuper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mgetArea\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"area = \"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0ml\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: object.__init__() takes exactly one argument (the instance to initialize)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "area =  12\n",
+      "Volume =  36\n"
      ]
     }
    ],
@@ -1688,12 +1686,12 @@
     "        \n",
     "class Square(Rectangle):\n",
     "    def __init__(self,l,b):\n",
-    "        super().__init__(self)\n",
+    "        super().__init__(l,b)\n",
     "    def getArea(self):\n",
     "        print(\"area = \",self.l*self.b)\n",
     "    \n",
-    "class Cube():\n",
-    "    def __init__(l,b,h):\n",
+    "class Cube(Rectangle):\n",
+    "    def __init__(self,l,b,h):\n",
     "        super().__init__(l,b)\n",
     "        self.h = h\n",
     "    def getVolume(self):\n",
@@ -1706,9 +1704,109 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "75346ac6",
+   "metadata": {},
+   "source": [
+    "# Iterator\n",
+    "It is an object that contains countable number of values. Is is used to move one by one in a collection of object.\\\n",
+    "Iterator makes use of the __iter__() and __next__() \\\n",
+    "for example if we have a string \"apple\"\\\n",
+    "then first the entire string is passed to the iterator iter() and save it to a variable\\\n",
+    "now when we print the first time we get the first value, 2nd time 2nd value and so on till nth element\\\n",
+    "If we try to print the (n+1)th element we get an error\\\n",
+    "\\\n",
+    "The for loop actually creates and iterator object and and executes next() each time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "dd1b3661",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple_iterator'>\n",
+      "apple\n",
+      "orange\n",
+      "kiwi\n"
+     ]
+    }
+   ],
+   "source": [
+    "mytuple = (\"apple\",\"orange\",\"kiwi\")\n",
+    "myiter = iter(mytuple)\n",
+    "print(type(myiter))\n",
+    "print(next(myiter))\n",
+    "print(next(myiter))\n",
+    "print(next(myiter))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "a0ff0dda",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d\n",
+      "a\n",
+      "d\n",
+      " \n",
+      "a\n",
+      "n\n",
+      "d\n",
+      " \n",
+      "m\n",
+      "o\n",
+      "m\n"
+     ]
+    }
+   ],
+   "source": [
+    "mystring = \"dad and mom\"\n",
+    "myiter = iter(mystring)\n",
+    "print(next(myiter))\n",
+    "print(next(myiter))\n",
+    "print(next(myiter))\n",
+    "print(next(myiter))\n",
+    "print(next(myiter))\n",
+    "print(next(myiter))\n",
+    "print(next(myiter))\n",
+    "print(next(myiter))\n",
+    "print(next(myiter))\n",
+    "print(next(myiter))\n",
+    "print(next(myiter))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "d9672217",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'range'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dd3cf0f",
+   "id": "01bfd76e",
    "metadata": {},
    "outputs": [],
    "source": []
