user defined iterator

--- a/Python basics.ipynb
+++ b/Python basics.ipynb
@@ -1676,7 +1676,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1d5b25e",
+   "id": "f95a50b6",
    "metadata": {},
    "source": [
     "## Creating an iterator"
@@ -1739,8 +1739,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 85,
+   "id": "447f7d64",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ram 90\n",
+      "Sita 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Bank:\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.account = {}\n",
+    "        \n",
+    "    def deposit(self,holder,amount):\n",
+    "        self.account[holder] = self.account.get(holder,0)+amount\n",
+    "        \n",
+    "    def withdraw(self,holder,amount):\n",
+    "        self.account[holder] = self.account.get(holder,0)-amount\n",
+    "        \n",
+    "    def __iter__(self):\n",
+    "        return iter(self.account.items())\n",
+    "    \n",
+    "sbi = Bank()\n",
+    "sbi.deposit(\"Ram\",100)\n",
+    "sbi.withdraw(\"Ram\",10)\n",
+    "sbi.deposit(\"Sita\",20)\n",
+    "\n",
+    "for (key,value) in sbi:\n",
+    "    print(key,value)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "706b7362",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "value\n",
+      "{'key': 'value', 'key1': 'value1'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict = {'key':'value1'}\n",
+    "dict['key'] = 'value'\n",
+    "print(dict['key'])\n",
+    "dict['key1'] = 'value1'\n",
+    "print(dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "1683c6b0",
+   "id": "aaa650ca",
    "metadata": {},
    "outputs": [],
    "source": []
