--- a/Python for math.ipynb
+++ b/Python for math.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "b874a564",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "a2b4e764",
    "metadata": {},
    "outputs": [
@@ -63,8 +63,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e1f180a4",
+   "metadata": {},
+   "source": [
+    "## frac"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "160dc4ad",
    "metadata": {},
    "outputs": [
@@ -88,8 +96,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "621df9c7",
+   "metadata": {},
+   "source": [
+    "## times"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "f81e34d2",
    "metadata": {},
    "outputs": [
@@ -112,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "8ecc5bc8",
    "metadata": {},
    "outputs": [
@@ -152,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "03c109dd",
    "metadata": {},
    "outputs": [
@@ -188,9 +204,132 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c375306c",
+   "metadata": {},
+   "source": [
+    "## Exponents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "db37c0c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "81\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(3**4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6b7644c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle 3^4 = 81$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(Math('3^4 = %g'%(3**4)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "04878ca9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle x^\\frac{3}{4}\\times 4^y = 3933.09$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "x=5\n",
+    "y=5.1\n",
+    "ans = x**(3/4) * 4**y\n",
+    "display(Math('x^\\\\frac{3}{4}\\\\times 4^y = %g'%(ans)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d86c0e81",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac {3^3}{x^y} = 0.00735558$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ans = 3**3 / x**y\n",
+    "display(Math('\\\\frac {3^3}{x^y} = %g'%ans))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "838d2a39",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle 10^{x-4} = 10$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ans = 10**(x-4)\n",
+    "display(Math('10^{x-4} = %g'%ans))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aeb34d3b",
+   "id": "530107e0",
    "metadata": {},
    "outputs": [],
    "source": []
