for loop in py for math

--- a/Python basics.ipynb
+++ b/Python basics.ipynb
@@ -1801,12 +1801,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "faf28715",
+   "metadata": {},
+   "source": [
+    "## Recursion\n",
+    "Function calling itself"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aaa650ca",
+   "id": "ff73dd66",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Fibonacci program to demonstarte "
+   ]
   }
  ],
  "metadata": {
