--- a/Python for math.ipynb
+++ b/Python for math.ipynb
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "9ab375c5",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "09286135",
    "metadata": {},
    "outputs": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "08f55d5a",
    "metadata": {},
    "outputs": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "d4ac2f4d",
    "metadata": {},
    "outputs": [
@@ -328,16 +328,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "0a7bdeda",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 to the power 0 is 1\n",
+      "2 to the power 1 is 2\n",
+      "2 to the power 2 is 4\n",
+      "2 to the power 3 is 8\n",
+      "2 to the power 4 is 16\n",
+      "2 to the power 5 is 32\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(6):\n",
+    "    num = 2**i\n",
+    "    print(f\"2 to the power {i} is {num}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "392cf879",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle (4\\times5)/(7+3)=2$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ans=int((4*5)/(7+3))\n",
+    "display(Math(f\"(4\\\\times5)/(7+3)={ans}\"))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "392cf879",
+   "id": "2917cb3e",
    "metadata": {},
    "outputs": [],
    "source": []
