--- a/Python basics.ipynb
+++ b/Python basics.ipynb
@@ -1684,37 +1684,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "01bfd76e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class NaturalNumber:\n",
     "    def __init__(self):\n",
@@ -1739,19 +1712,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "id": "447f7d64",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ram 90\n",
-      "Sita 20\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Bank:\n",
     "    \n",
@@ -1779,19 +1743,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "id": "706b7362",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "value\n",
-      "{'key': 'value', 'key1': 'value1'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dict = {'key':'value1'}\n",
     "dict['key'] = 'value'\n",
@@ -1811,13 +1766,154 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 58,
+   "id": "ebf829f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fibonacci of 1 is 0\n",
+      "fibonacci of 2 is 1\n",
+      "fibonacci of 3 is 1\n",
+      "fibonacci of 4 is 2\n",
+      "fibonacci of 5 is 3\n",
+      "fibonacci of 6 is 5\n",
+      "fibonacci of 7 is 8\n",
+      "fibonacci of 8 is 13\n",
+      "fibonacci of 9 is 21\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Fibonacci program to demonstarte \n",
+    "def fibonacci(num):\n",
+    "    if(num<=0):\n",
+    "        print(\"Number should be greater than 0\")\n",
+    "    if (num==1):\n",
+    "        return 0\n",
+    "    elif (num==2):\n",
+    "        return 1\n",
+    "    elif(num>2):\n",
+    "        return fibonacci(num-1)+fibonacci(num-2)\n",
+    "        \n",
+    "#fibonacci(10)\n",
+    "for i in range(1,10):\n",
+    "    fibo = fibonacci(i)\n",
+    "    print(f\"fibonacci of {i} is {fibo}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55b1c7ed",
+   "metadata": {},
+   "source": [
+    "# Memoization\n",
+    "In recursion the function calls itself and since it calls itself. In fiboancci as the function calls itself again and again as the size of input grows the performance reduces. To avoid this we use the concept of memoization\n",
+    "\n",
+    "\n",
+    "Memoization - Caching the Least Recently Used(LRU) values to enhance the performace of the recursion\n",
+    "\n",
+    "To cache the values using a dictonary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "82f8723f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "0.5\n",
+      "0.6666666666666666\n",
+      "0.6\n",
+      "0.625\n",
+      "0.6153846153846154\n",
+      "0.6190476190476191\n",
+      "0.6176470588235294\n",
+      "0.6181818181818182\n",
+      "0.6179775280898876\n",
+      "0.6180555555555556\n",
+      "0.6180257510729614\n",
+      "0.6180371352785146\n",
+      "0.6180327868852459\n",
+      "0.6180344478216818\n",
+      "0.6180338134001252\n",
+      "0.6180340557275542\n",
+      "0.6180339631667066\n",
+      "0.6180339985218034\n",
+      "0.618033985017358\n",
+      "0.6180339901755971\n",
+      "0.6180339882053251\n",
+      "0.618033988957902\n",
+      "0.6180339886704432\n",
+      "0.6180339887802427\n",
+      "0.618033988738303\n",
+      "0.6180339887543226\n",
+      "0.6180339887482036\n",
+      "0.6180339887505408\n",
+      "0.6180339887496481\n",
+      "0.618033988749989\n",
+      "0.6180339887498588\n",
+      "0.6180339887499086\n",
+      "0.6180339887498896\n",
+      "0.6180339887498969\n",
+      "0.6180339887498941\n",
+      "0.6180339887498951\n",
+      "0.6180339887498948\n",
+      "0.6180339887498949\n",
+      "0.6180339887498948\n",
+      "0.6180339887498949\n",
+      "0.6180339887498948\n",
+      "0.6180339887498949\n",
+      "0.6180339887498949\n",
+      "0.6180339887498949\n",
+      "0.6180339887498949\n",
+      "0.6180339887498949\n",
+      "0.6180339887498949\n",
+      "0.6180339887498949\n"
+     ]
+    }
+   ],
+   "source": [
+    "fibo_cache = {}\n",
+    "\n",
+    "def fibonacci(num):\n",
+    "    \n",
+    "    #if value is in cache return i\n",
+    "    if num in fibo_cache:\n",
+    "        return fibo_cache[num]\n",
+    "    \n",
+    "    #if not computer the value of n\n",
+    "    if(num<=0):\n",
+    "        print(\"Number should be greater than 0\")\n",
+    "    if (num==1):\n",
+    "         value = 1\n",
+    "    elif (num==2):\n",
+    "        value = 1\n",
+    "    elif(num>2):\n",
+    "        value = fibonacci(num-1)+fibonacci(num-2)\n",
+    "    \n",
+    "    #store it in the cache and return it\n",
+    "    fibo_cache[num] = value\n",
+    "    return value\n",
+    "\n",
+    "for i in range(1,50):\n",
+    "    print(f\"{fibonacci(i)/fibonacci(i+1)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ff73dd66",
+   "id": "1fc9368f",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Fibonacci program to demonstarte "
-   ]
+   "source": []
   }
  ],
  "metadata": {
