--- a/Python basics.ipynb
+++ b/Python basics.ipynb
@@ -1868,9 +1868,267 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d3fcdaf7",
+   "metadata": {},
+   "source": [
+    "# Scopes in python\n",
+    "Scopes are the place where a variable is accessible in a program.\\\n",
+    "Scope resolution order of python LEGB\\\n",
+    "L - Local\\\n",
+    "E - Enclosed\\\n",
+    "G - Global\\\n",
+    "B - Built-in\n",
+    "\n",
+    "Global variables are the one which are not defined inside any of the function and need not be defined befor the function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5375d7cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# local\n",
+    "\n",
+    "def display_x():\n",
+    "    x=5\n",
+    "    print(x)\n",
+    "    \n",
+    "x=3\n",
+    "display_x() #prints 5 as it is  the closest variable in the scope resolution."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "388a4b19",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Enclosed\n",
+    "def funcA():\n",
+    "    x = 12\n",
+    "    def funcB():\n",
+    "        print(x)\n",
+    "    funcB()\n",
+    "        \n",
+    "funcA() # Though we print x in funcB x is not defined in funB. It searches for x inside funcB and then searches in funcA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "dc5bfaab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Global\n",
+    "\n",
+    "def func():\n",
+    "    print(x)\n",
+    "    \n",
+    "x=4\n",
+    "func() # Prints 4 as there is no x in local scope it searches in global scope"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "a645aee7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Built-in\n",
+    "from math import e\n",
+    "\n",
+    "\n",
+    "def func():\n",
+    "    print(e) # prints 2.71 if global e is not defined as it first sees the local scope and e is not defined built in scope\n",
+    "e = 3  \n",
+    "func()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2992be02",
+   "metadata": {},
+   "source": [
+    "## global keyword in python\n",
+    "global keyword in python is used to change the global variables value in the memory by the local variable's value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "42824c8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In func1 x = 11\n",
+      "In func1 y = 22\n",
+      "In func2 x = 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=1\n",
+    "def func1():\n",
+    "    x=11\n",
+    "    y=22\n",
+    "    print(f\"In func1 x = {x}\")\n",
+    "    print(f\"In func1 y = {y}\")\n",
+    "    \n",
+    "def func2():\n",
+    "    print(f\"In func2 x = {x}\")\n",
+    "    \n",
+    "func1()\n",
+    "func2()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "b7c5c3fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In func1 x = 11\n",
+      "In func1 y = 22\n",
+      "In func2 x = 11\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=1\n",
+    "def func1():\n",
+    "    global x # Using the global keyword\n",
+    "    x=11\n",
+    "    y=22\n",
+    "    print(f\"In func1 x = {x}\")\n",
+    "    print(f\"In func1 y = {y}\")\n",
+    "    \n",
+    "def func2():\n",
+    "    print(f\"In func2 x = {x}\")\n",
+    "    \n",
+    "func1()\n",
+    "func2() # func2 is affected by global keyword in func1 as the value is changed in the memory."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e39345e1",
+   "metadata": {},
+   "source": [
+    "## nonlocal keyword\n",
+    "This keyword is used so that the the value of the variable in outer function(enclosing function) is changed with the value of the inner function variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "e670c129",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "inner function sees x as 3\n",
+      "outer function sees x as 2\n",
+      "Globally x is seen as  1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Without nonlocal keyword\n",
+    "x = 1\n",
+    "def outer():\n",
+    "    x=2\n",
+    "    def inner():\n",
+    "        x=3\n",
+    "        print(f\"inner function sees x as {x}\")\n",
+    "    inner()\n",
+    "    print(f\"outer function sees x as {x}\")\n",
+    "outer()\n",
+    "print(f\"Globally x is seen as  {x}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "4b5b6511",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "inner function sees x as 3\n",
+      "outer function sees x as 3\n",
+      "Globally x is seen as  1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# With nonlocal keyword\n",
+    "# The value of x in outer() is written with value of x with\n",
+    "x = 1\n",
+    "def outer():\n",
+    "    x=2\n",
+    "    def inner():\n",
+    "        nonlocal x\n",
+    "        x=3\n",
+    "        print(f\"inner function sees x as {x}\")\n",
+    "    inner()\n",
+    "    print(f\"outer function sees x as {x}\")\n",
+    "outer()\n",
+    "print(f\"Globally x is seen as  {x}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c06f183c",
+   "id": "1ce1b931",
    "metadata": {},
    "outputs": [],
    "source": []
